tests/paczka1/small_fuzzy/70193556.err
Error in line 3: nGrJVbTi S732 93,8
Error in line 4: 5X1fobJCuc A753 59,8
